glava8_k8s/part4_network/nodeport-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-node
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      nodePort: 30000
